@@ -1,4 +1,4 @@
-﻿zapret v.3
+﻿zapret v.4
 
 Для чего это надо
 -----------------
@@ -23,6 +23,7 @@
 что сервер увеличил window size, и все пойдет как обычно.
 
 Другие DPI спотыкаются, когда заголовок "Host:" пишется в другом регистре : например, "host:".
+Кое-где работает добавление дополнительного проблема после метода : "GET /" => "GET  /".
 
 Как это реализовать на практике в системе linux
 -----------------------------------------------
@@ -76,11 +77,13 @@ transparent proxy (TPROXY или DNAT). TPROXY не работает с соед
 и для этого пользователя отключается DNAT через "-m owner". Полное проксирование требует больше ресурсов
 процессора, чем манипуляция с исходящими пакетами без реконструкции TCP соединения.
 
+iptables -t nat -I PREROUTING -p tcp --dport 80 -j DNAT --to 127.0.0.1:1188
+iptables -t nat -I OUTPUT -p tcp --dport 80 -m owner ! --uid-owner tpws -j DNAT --to 127.0.0.1:1188
 
 nfqws
 -----
 
-Эта программа и есть модификатор пакетов и обработчик очереди NFQUEUE.
+Эта программа - модификатор пакетов и обработчик очереди NFQUEUE.
 Она берет следующие параметры :
  --qnum=200		; номер очереди
  --wsize=4		; менять tcp window size на указанный размер
@@ -91,11 +94,13 @@ tpws
 -----
 
 tpws - это transparent proxy.
- --bind-addr		; на каком адресе слушать
+ --bind-addr		; на каком адресе слушать. может быть ipv4 или ipv6 адрес. если не указано, то слушает на всех адресах ipv4 и ipv6
  --port=<port>		; на каком порту слушать
  --split-http-req=method|host	; способ разделения http запросов на сегменты : около метода (GET,POST) или около заголовка Host
- --hostcase             ; change Host: => host:                                                                                             
- --daemon               ; daemonize
+ --hostcase             ; замена "Host:" => "host:"
+ --methodspace		; добавить пробел после метода : "GET /" => "GET  /"
+ --daemon               ; демонизировать прогу
+ --user=<username>	; менять uid процесса
  
 Провайдеры
 ----------
@@ -107,6 +112,8 @@ dom.ru : нужно проксирование HTTP сессий через tpws
   блокировок, поэтому если вдруг на каком-то сайте вылезает блокировочный баннер, то идите в консоль firefox, вкладка network.
   Загружайте сайт и смотрите куда идет редирект. Потом вносите домен в zapret-hosts-user.txt. Например, на kinozal.tv имеются
   2 запрашиваемых поддомена : s.kinozal.tv и st.kinozal.tv с разными IP адресами.
+sknt.ru : проверена работа с tpws с параметром "--split-http-req=method". возможно, будет работать nfqueue, пока возможности
+  проверить нет
 
 Пример установки на debian 7
 ----------------------------
@@ -140,6 +147,31 @@ dom.ru : нужно проксирование HTTP сессий через tpws
 Никто и не говорил, что это будет работать везде.
 Попробуйте снять дамп в wireshark или "tcpdump -vvv -X host <ip>", посмотрите действительно ли первый
 сегмент TCP уходит коротким и меняется ли регистр "Host:".
+
+ubuntu 12,14
+------------
+
+Имеется готовый конфиг для upstart : zapret.conf. Его нужно скопировать в /etc/init и настроить по аналогии с debian.
+Запуск службы : "start zapret"
+Останов службы : "stop zapret"
+
+Другие linux системы
+--------------------
+
+Существует несколько основных систем запуска служб : sysvinit, upstart, systemd.
+Насройка зависит от системы, используемой в вашем дистрибутиве.
+Типичная стратегия - найти скрипт или конфигурацию запуска других служб и написать свой по аналогии,
+при необходимости почитывая документации по системе запуска.
+Нужные команды можно взять из предложенных скриптов.
+
+Фаерволлы
+---------
+
+Если вы используете какую-то систему управления фаерволом, то она может вступать в конфликт
+с имеющимся скриптом запуска. В этом случае правила для iptables должны быть прикручены
+к вашему фаерволу отдельно от скрипта запуска tpws или nfqws.
+Именно так решается вопрос в случае с openwrt, поскольку там своя система управления фаерволом.
+При повторном применении правил она могла бы поломать настройки iptables, сделанные скриптом из init.d.
 
 Что делать с openwrt
 --------------------
