@@ -22,3 +22,6 @@ ISP support : successfully tested sknt.ru on 'domru' configuration
   other configs will probably also work, but cannot test
 compile : openwrt compile howto
 
+v4
+
+tpws : added ability to insert extra space after http method : "GET /" => "GET  /"
